--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a developer in training...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Born in Arizona, moved to Oregon in 2010</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hotrods, music, music about hotrods</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software developer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Albany, Oregon</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>So I can create.</p>
     </section>
 
     <footer id="footer">
